--- a/src/theme/omni-theme.theme.css
+++ b/src/theme/omni-theme.theme.css
@@ -7,7 +7,7 @@
  * @website https://datsfilipe.github.io/better-discord/
 */
 
-@import "https://datsfilipe.github.io/better-discord/src/theme/source.css";
+@import "https://CQQN-Spark.github.io/better-discord/src/theme/source.css";
 
 :root {
   --version2-7-3: none;
