--- a/src/theme/source.css
+++ b/src/theme/source.css
@@ -1,5 +1,53 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Open+Sans:wght@400;600&family=Poppins:wght@400;700&family=Source+Code+Pro&display=swap");
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
+
+img[src="/assets/e666a84a7a5ea2abbbfa73adf22e627b.svg"] {
+  transition-delay: 2s;
+  padding: var(--badge-size) var(--badge-size) 0px 0px;
+  overflow: hidden;
+  box-sizing: border-box;
+  background-image: url("https://discord.com/assets/e666a84a7a5ea2abbbfa73adf22e627b.svg");
+}
+div:hover > img[src="/assets/e666a84a7a5ea2abbbfa73adf22e627b.svg"] {
+  background-image: url("https://media.discordapp.net/attachments/756856464374628352/849218085961596948/events.gif");
+  transform: translateY(-1.5px);
+  transition-delay: 0s;
+}
+div[aria-label*="HypeSquad"] > img {
+  transition-duration: 0.4s;
+  transform: scale(1.15);
+  padding: var(--badge-size) var(--badge-size) 0px 0px;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+div[aria-label*="HypeSquad"]:hover > img {
+  filter: drop-shadow(0px 0px 2px var(--hypesquad-colour));
+}
+div:hover > img[src="/assets/efcc751513ec434ea4275ecda4f61136.svg"] {
+  --hypesquad-colour: rgb(156, 132, 239);
+  background-image: url("https://media.discordapp.net/attachments/756856464374628352/848502137436635156/braverysquadbadge.png");
+  transform: scale(1.35);
+}
+div:hover > img[src="/assets/ec8e92568a7c8f19a052ef42f862ff18.svg"] {
+  --hypesquad-colour: rgb(244, 123, 103);
+  background-image: url("https://media.discordapp.net/attachments/756856464374628352/848503338579656714/brilliancesquadbadge.png");
+  transform: scale(1.35);
+}
+div:hover > img[src="/assets/9f00b18e292e10fc0ae84ff5332e8b0b.svg"] {
+  --hypesquad-colour: rgb(69, 221, 192);
+  background-image: url("https://media.discordapp.net/attachments/756856464374628352/848503229583065088/balancesquadbadge.png");
+  transform: scale(1.35);
+}
+img[src="/assets/efcc751513ec434ea4275ecda4f61136.svg"] {
+  background-image: url("https://discord.com/assets/995ecfdbdf94ad84dd4d802c104e4630.svg");
+}
+img[src="/assets/ec8e92568a7c8f19a052ef42f862ff18.svg"] {
+  background-image: url("https://discord.com/assets/473dadec13ab7e90e209cc60fccb31c5.svg");
+}
+img[src="/assets/9f00b18e292e10fc0ae84ff5332e8b0b.svg"] {
+  background-image: url("https://discord.com/assets/58f11abcf3c13812bff969baaeb84d82.svg");
+}
+
 :root{
   --font-primary: 'Inter', sans-serif;
   --font-display: 'Open Sans', sans-serif;
